[gd_scene load_steps=3 format=3 uid="uid://d2vt8dvkbu118"]

[ext_resource type="PackedScene" uid="uid://c2ubkrevhir58" path="res://Views/Menus/SettingsButtons.tscn" id="1_cmrd7"]
[ext_resource type="Script" path="res://Views/Menus/Settings.gd" id="1_nx6fm"]

[node name="MovementSettings" type="Node2D"]
script = ExtResource("1_nx6fm")

[node name="Default" type="Button" parent="."]
offset_left = 332.0
offset_top = 265.0
offset_right = 482.0
offset_bottom = 365.0
text = "Default"

[node name="Accessible" type="Button" parent="."]
offset_left = 503.0
offset_top = 265.0
offset_right = 653.0
offset_bottom = 365.0
text = "Visually 
accessible"

[node name="Custom" type="Button" parent="."]
offset_left = 673.0
offset_top = 265.0
offset_right = 823.0
offset_bottom = 365.0
text = "Custom
"

[node name="DoubleJumpToggle" type="CheckButton" parent="."]
offset_left = 588.0
offset_top = 422.0
offset_right = 632.0
offset_bottom = 446.0

[node name="PauseWallToggle" type="CheckButton" parent="."]
offset_left = 588.0
offset_top = 477.0
offset_right = 632.0
offset_bottom = 501.0

[node name="DoubleJump" type="Label" parent="."]
offset_left = 460.0
offset_top = 422.0
offset_right = 585.0
offset_bottom = 445.0
text = "Double jump"

[node name="PauseWall" type="Label" parent="."]
offset_left = 408.0
offset_top = 477.0
offset_right = 567.0
offset_bottom = 500.0
text = "Pause on wall jump
"

[node name="SettingsButtons" parent="." instance=ExtResource("1_cmrd7")]
position = Vector2(225, 0)

[node name="Return" type="Button" parent="."]
offset_left = 49.0
offset_top = 40.0
offset_right = 94.0
offset_bottom = 71.0
text = "Back"

[connection signal="pressed" from="Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="Accessible" to="." method="_on_accessible_pressed"]
[connection signal="pressed" from="Custom" to="." method="_on_custom_pressed"]
[connection signal="toggled" from="DoubleJumpToggle" to="." method="_on_double_jump_toggle_toggled"]
[connection signal="toggled" from="PauseWallToggle" to="." method="_on_pause_wall_toggle_toggled"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
