[gd_scene load_steps=2 format=3 uid="uid://d2vt8dvkbu118"]

[ext_resource type="Script" path="res://Views/Menus/Settings.gd" id="1_j2rwk"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_j2rwk")

[node name="Header" type="Label" parent="."]
offset_left = 441.0
offset_top = 96.0
offset_right = 503.0
offset_bottom = 119.0
text = "Settings"

[node name="Return" type="Button" parent="."]
offset_left = 367.0
offset_top = 316.0
offset_right = 557.0
offset_bottom = 384.0
text = "Back"

[node name="Label" type="Label" parent="."]
offset_left = 703.0
offset_top = 216.0
offset_right = 936.0
offset_bottom = 239.0
text = "Accessible movement settings"

[node name="DefaultActive" type="Button" parent="."]
offset_left = 281.0
offset_top = 172.0
offset_right = 460.0
offset_bottom = 277.0
text = "Default Movement"

[node name="AccessibleActive" type="Button" parent="."]
offset_left = 481.0
offset_top = 172.0
offset_right = 660.0
offset_bottom = 277.0
text = "Accessible Movement"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="DefaultActive" to="." method="_on_default_active_pressed"]
[connection signal="pressed" from="AccessibleActive" to="." method="_on_accessible_active_pressed"]
